--- a/website/src/pages/tutorial/basic/09-set-up-graphql-code-generator.mdx
+++ b/website/src/pages/tutorial/basic/09-set-up-graphql-code-generator.mdx
@@ -1,10 +1,13 @@
 ---
-description: Set up GraphQL Code Generator and Server Preset in your project to enforce type-safety and runtime safety.
+description:
+  Set up GraphQL Code Generator and Server Preset in your project to enforce type-safety and runtime
+  safety.
 ---
 
 # Set up GraphQL Code Generator and Server Preset
 
-In this section, you are going to set up [GraphQL Code Generator](https://the-guild.dev/graphql/codegen) with Server Preset in your project.
+In this section, you are going to set up
+[GraphQL Code Generator](https://the-guild.dev/graphql/codegen) with Server Preset in your project.
 This adds strong typing automatically, and reduces runtime error for your application.
 
 ## Preparation
@@ -15,89 +18,294 @@ First, let's install the required packages:
 npm i -D --save-exact @graphql-codegen/cli@5.0.2 @eddeee888/gcg-typescript-resolver-files@0.10.4
 ```
 
-- `@graphql-codegen/cli` is the main package for GraphQL Code Generator. It provides a CLI to generate code from your GraphQL schema.
-- `@eddeee888/gcg-typescript-resolver-files` is a GraphQL Code Generator preset, written specifically for GraphQL servers. It automatically generates TypeScript types and resolver files. It also runs statical analysis to ensure type-safety.
+- `@graphql-codegen/cli` is the main package for GraphQL Code Generator. It provides a CLI to
+  generate code from your GraphQL schema.
+- `@eddeee888/gcg-typescript-resolver-files` is a GraphQL Code Generator preset, written
+  specifically for GraphQL servers. It automatically generates TypeScript types and resolver files.
+  It also runs statical analysis to ensure type-safety.
 
-So far, you've been keeping a lot of code together for simplicity. This new setup requires your project to be structured in a way that it is still maintainable at scale.
-Most noticable, schema type definitions and resolvers are separated into different files.
+So far, you've been keeping a lot of code together for simplicity. This new setup requires your
+project to be structured in a way that it is still maintainable at scale. Most noticable, schema
+type definitions and resolvers are separated into different files.
 
-Let's start by creating a new folder `src/graphql` and move the type definitions to a file called `schema.ts` under this folder:
+Let's start by creating a new folder `src/schemas` and move the type definitions to a file called
+`schema.graphql` under this folder:
 
-```ts filename="src/graphql/schema.ts"
-export const typeDefinitions = /* GraphQL */ `
-  type Query {
-    info: String!
-    feed: [Link!]!
-    comment(id: ID!): Comment
-  }
+```graphql filename="src/schemas/schema.graphql"
+type Query {
+  info: String!
+  feed: [Link!]!
+  comment(id: ID!): Comment
+}
 
-  type Mutation {
-    postLink(url: String!, description: String!): Link!
-    postCommentOnLink(linkId: ID!, body: String!): Comment!
-  }
+type Mutation {
+  postLink(url: String!, description: String!): Link!
+  postCommentOnLink(linkId: ID!, body: String!): Comment!
+}
 
-  type Link {
-    id: ID!
-    description: String!
-    url: String!
-    comments: [Comment!]!
-  }
+type Link {
+  id: ID!
+  description: String!
+  url: String!
+  comments: [Comment!]!
+}
 
-  type Comment {
-    id: ID!
-    body: String!
-  }
-`;
+type Comment {
+  id: ID!
+  body: String!
+}
 ```
 
 Next, create a `codegen.ts` at the root of your project:
 
 ```ts filename="codegen.ts"
-import type { CodegenConfig } from "@graphql-codegen/cli";
-import { defineConfig } from "@eddeee888/gcg-typescript-resolver-files";
+import { defineConfig } from '@eddeee888/gcg-typescript-resolver-files'
+import type { CodegenConfig } from '@graphql-codegen/cli'
 
 // 1.
 const config: CodegenConfig = {
-  schema: "src/graphql/schema.ts", // 2.
+  schema: 'src/schemas/**/schema.graphql', // 2.
   generates: {
-    "src/graphql": defineConfig({ // 3.
-      resolverGeneration: "minimal", // 4.
-    }),
-  },
-};
-export default config;
+    'src/schemas': defineConfig({
+      // 3.
+      resolverGeneration: 'minimal' // 4.
+      typesPluginsConfig: {
+        contextType: "../context#GraphQLContext", // 5.
+      },
+    })
+  }
+}
+export default config
 ```
 
 This file contains the configuration for GraphQL Code Generator. Let's break it down:
 
 1. The `config` variable tells GraphQL Code Generator what to generate.
 2. The `schema` field points to the schema file you just created.
-3. The `generates` field tells GraphQL Code Generator where to put the generated files. In this case, Server Preset will generate files under `src/graphql` (more on this later)
-4. The `resolverGeneration: "minimal"` config tells Server Preset to generate just the root-level resolvers, unless there are mappers (more on this later).
+3. The `generates` field tells GraphQL Code Generator where to put the generated files. In this
+   case, Server Preset will generate files under `src/graphql` (more on this later)
+4. The `resolverGeneration: "minimal"` config tells Server Preset to generate just the root-level
+   resolvers, unless there are mappers (more on this later).
+5. The `contextType` config is used to generate the context type for every resolver.
 
 Now, run the following command to generate the files:
 
-```sh npm2yarn
+```sh
 npx graphql-codegen
 ```
 
-You will see a new folder `src/graphql` created with the following files:
+You will see a new folder `src/schemas` created with the following files:
 
 ```
 src/
-  graphql/
-    resolvers/
-      Mutation/
-        postCommentOnLink.ts
-        postLink.ts
-      Query/
-        comment.ts
-        feed.ts
-        info.ts
-    resolvers.generated.ts
-    schema.generated.graphqls
-    typeDefs.generated.ts
-    types.generated.ts
+  schemas/
+    base/
+      resolvers/
+        Mutation/
+          postCommentOnLink.ts (1)
+          postLink.ts (1)
+        Query/
+          comment.ts (1)
+          feed.ts (1)
+          info.ts (1)
+      schema.graphql
+    resolvers.generated.ts (2)
+    schema.generated.graphqls (3)
+    typeDefs.generated.ts (4)
+    types.generated.ts (5)
 ```
 
-## Workflow
+1. These files are the root-level resolvers.
+2. This file contains the resolvers map. All the generated resolvers (e.g. `Query.comment`,
+   `Mutation.postCommentOnLink`, etc.) are automatically imported into this file.
+3. This file contains the generated schema. In this case, there is only one `schema.graphql` file.
+   However, as the server grows, you can choose to break it up into multiple smaller modules, each
+   with its own schema file e.g. `src/schemas/comment/schema.graphql`,
+   `src/schemas/link/schema.graphql`, etc.
+4. This file contains the generated type definitions. This is the AST representation of the schema.
+5. This file contains the generated types.
+
+Note that the generated root-level resolver files do not have any implementation yet, and there is
+no object type resolvers. In the next section, you will learn how to migrate the implementation
+over.
+
+## Migrate logic to new resolvers
+
+### Root-level resolvers
+
+By default, a generated root-level resolver file may look like this:
+
+```ts filename="src/schemas/base/resolvers/Query/feed.ts"
+import type { QueryResolvers } from './../../../types.generated'
+
+export const feed: NonNullable<QueryResolvers['feed']> = async (_parent, _arg, _ctx) => {
+  /* Implement Query.feed resolver logic here */
+}
+```
+
+It should be trivial to bring the existing logic over:
+
+```ts filename="src/schemas/base/resolvers/Query/feed.ts"
+export const feed: NonNullable<QueryResolvers['feed']> = async (_parent, _arg, context) => {
+  return context.prisma.link.findMany()
+}
+```
+
+Note that we no longer have to manually type parent, args or context types. They are automatically
+inferred by the `NonNullable<QueryResolvers['feed']>` type!
+
+You may notice TypeScript may report an error that looks like this:
+
+```
+Property 'comments' is missing in type '{ id: number; createdAt: Date; description: string; url: string; }' but required in type 'Link'.
+```
+
+This is because the generated types forces you to return objects that match schema types to avoid
+runtime errors. However, we want to defer resolve here by using mappers like previous implementation
+to ensure we do not fetch `comments` until it is requested. This is covered in the next section.
+
+### Using mappers
+
+We used `Link` type from `@prisma/client` in our previous implementation by making `Query.feed`
+return an array of Prisma's `Link`, and manually typed the `parent` of Link resolvers:
+
+```ts filename="src/schema.ts"
+// Previous implementation
+import type { Link } from '@prisma/client'
+
+const resolvers = {
+  Query: {
+    // other resolvers
+    feed: async (parent: unknown, args: {}, context: GraphQLContext) => {
+      return context.prisma.link.findMany() // This returns an array of Prisma's Link
+    }
+  },
+  Link: {
+    // Manually type the parent of each resolver as Prisma's Link
+    id: (parent: Link) => parent.id,
+    description: (parent: Link) => parent.description,
+    url: (parent: Link) => parent.url,
+    comments(parent: Link, args: {}, context: GraphQLContext) {
+      return context.prisma.comment.findMany({
+        where: {
+          linkId: parent.id
+        }
+      })
+    }
+  }
+}
+```
+
+When using Server Preset, we only need to declare Prisma's `Link` type as the mapper once, and it
+will be automatically applied to all Link resolvers. Here are the steps:
+
+1. Create a new file to track mappers: `src/schemas/base/schema.mappers.ts`. This file is in the
+   same folder as the `schema.graphql` file.
+2. Add mappers for types that exist in `schema.graphql` into `schema.mappers.ts` with the convention
+   of `<GraphQL type name>Mapper`
+
+For `Link`, it should look like this:
+
+```ts filename="src/schemas/base/schema.mappers.ts"
+import type { Link } from '@prisma/client'
+
+export type LinkMapper = Link
+```
+
+Now, when you run `npx graphql-codegen`, the following happens automatically:
+
+- Type `LinkMapper` as `parent` for every Link resolvers
+- Create `src/schemas/base/resolvers/Link.ts`, and wire it up to the resolvers map in
+  `resolvers.generated.ts`
+- Runs static analysis and suggests you to implement the `comments` resolvers to avoid runtime
+  errors.
+
+The generated `src/schemas/base/resolvers/Link.ts` file may look like this:
+
+```ts filename="src/schemas/base/resolvers/Link.ts"
+import type { LinkResolvers } from './../../types.generated'
+
+/*
+ * Note: This object type is generated because "LinkMapper" is declared. This is to ensure runtime safety.
+ *
+ * When a mapper is used, it is possible to hit runtime errors in some scenarios:
+ * - given a field name, the schema type's field type does not match mapper's field type
+ * - or a schema type's field does not exist in the mapper's fields
+ *
+ * If you want to skip this file generation, remove the mapper or update the pattern in the `resolverGeneration.object` config.
+ */
+export const Link: LinkResolvers = {
+  /* Implement Link resolver logic here */
+  comments: async (_parent, _arg, _ctx) => {
+    /* Link.comments resolver is required because Link.comments exists but LinkMapper.comments does not */
+  }
+}
+```
+
+Note that it doesn't generate `Link.id`, `Link.description` and `Link.url` resolvers these types in
+Prisma's Link are compatible to the mapper's types, meaning the resolvers can be omitted.
+
+Now, you can simply remove the comments, and migrate the existing comments over. The final
+implementation may look like this:
+
+```ts filename="src/schemas/base/resolvers/Link.ts"
+import type { LinkResolvers } from './../../types.generated'
+
+export const Link: LinkResolvers = {
+  comments: async (parent, _arg, context) => {
+    return context.prisma.comment.findMany({
+      where: {
+        linkId: parent.id
+      }
+    })
+  }
+}
+```
+
+### Force creating an object type resolver file
+
+Sometimes, you may want to run custom logic in your resolvers. Object type resolvers can be
+generated by simply creating an empty file where the it should be generated, and run codegen.
+
+For example, let's force create `Comment` object type resolver file. We know that `Comment` is a
+type that is on the same level as `Link` in the resolvers map, so we can create an empty file at
+`src/schemas/base/resolvers/Comment.ts`, then run `npx graphql-codegen`.
+
+When codegen is run, Server Preset detects that you want to have custom logic for `Comment` type, so
+it will fill in the content of the file, and wire it up to the resolvers map. The content may look
+like this:
+
+```ts filename="src/schemas/base/resolvers/Comment.ts"
+import type { CommentResolvers } from './../../types.generated'
+
+export const Comment: CommentResolvers = {
+  /* Implement Comment resolver logic here */
+}
+```
+
+## Using the generated resolvers map and type definitions
+
+Once you have migrated all the resolver logic, the last step is to use the generated resolvers map
+and type definitions to your server:
+
+```ts filename="src/schema.ts"
+import { createSchema } from 'graphql-yoga'
+import { resolvers } from './schemas/resolvers.generated'
+import { typeDefs } from './schemas/typeDefs.generated'
+
+export const schema = createSchema({
+  resolvers: [resolvers],
+  typeDefs: [typeDefs]
+})
+```
+
+## Summary
+
+In this section, you have set up GraphQL Code Generator with Server Preset in your project. This
+setup takes care of all the types and resolvers convention for you, so you can focus on developing
+your application!
+
+## Optional Exercise
+
+As an additional exercise, you can try migrating the rest of the resolvers and mappers to the new
+setup.
